--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
        <link href="https://fonts.googleapis.com" rel="preconnect">
        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
+       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
     <!--    <script src="dist/script.js"></script>-->
 
@@ -52,7 +52,7 @@
                     <div class="flex flex-col lg:flex-row items-center gap-3.5 flex-wrap justify-center">
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -63,7 +63,7 @@
 
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -74,7 +74,7 @@
 
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -85,7 +85,7 @@
 
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -96,7 +96,7 @@
 
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -107,7 +107,7 @@
 
                         <div
                             class="flex flex-row gap-7p bg-co-white rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                            <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -368,7 +368,7 @@
                                 class="flex flex-col lg:flex-row items-center lg:justify-start gap-3.5 flex-wrap justify-center">
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -379,7 +379,7 @@
 
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -390,7 +390,7 @@
 
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -401,7 +401,7 @@
 
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -412,7 +412,7 @@
 
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -423,7 +423,7 @@
 
                                 <div
                                     class="flex flex-row gap-7p bg-co-bg2 rounded-full py-3 pr-10 pl-5 lg:py-3.5 lg:pl-3.5 justify-between items-center text-co-h6">
-                                    <svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                            <svg class="shrink-0" fill="none" height="26" viewBox="0 0 26 26" width="26"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M13 0.519531C6.08594 0.519531 0.519531 6.08594 0.519531 13C0.519531 19.9141 6.08594 25.4805 13 25.4805C19.9141 25.4805 25.4805 19.9141 25.4805 13C25.4805 6.08594 19.9141 0.519531 13 0.519531ZM13 23.0195C7.49219 23.0195 2.98047 18.5078 2.98047 13C2.98047 7.49219 7.49219 2.98047 13 2.98047C18.5078 2.98047 23.0195 7.49219 23.0195 13C23.0195 18.5078 18.5078 23.0195 13 23.0195ZM18.7422 7.49219L10.4805 15.6953L7.25781 12.4727L5.5 14.2305L10.4805 19.2695L20.5 9.25L18.7422 7.49219Z"
@@ -463,7 +463,7 @@
         <div class="flex flex-col items-center mb-10 lg:mb-172p">
 
             <!-- Info box -->
-            <div class="flex flex-col gap-5 lg:gap-3 text-center items-center mb-52p mb-60p">
+            <div class="flex flex-col gap-5 lg:gap-3 text-center items-center mb-52p lg:mb-60p">
                 <h3 class="text-co-mo-h1 lg:text-co-h3">Phasellus a vitae iaculis magna.</h3>
                 <h5 class="text-base lg:text-co-h5">Phasellus a vitae iaculis magna eleifend pulvinar velit odio.</h5>
             </div>
@@ -471,7 +471,7 @@
             <!-- Accordion -->
             <div class="overflow-hidden flex flex-col gap-3.5 lg:gap-6">
 
-                <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="faq bg-co-white rounded-mobile py-30p pr-30p pl-34p lg:pt-40p lg:pb-44p lg:pl-90p lg:pr-60p">
                     <input id="chk1" type="checkbox" class="hidden">
                     <label for="chk1"
                         class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
@@ -496,7 +496,7 @@
                     </div>
                 </div>
 
-                <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="faq bg-co-white rounded-mobile py-30p pr-30p pl-34p lg:pt-40p lg:pb-44p lg:pl-90p lg:pr-60p">
                     <input id="chk2" type="checkbox" class="hidden">
                     <label for="chk2"
                         class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
@@ -520,7 +520,7 @@
                         euismod. </div>
                 </div>
 
-                <div class="faq bg-co-white rounded-mobile py-30p lg:py-66p pr-9 pl-34p lg:pr-60p lg:pl-90p">
+                <div class="faq bg-co-white rounded-mobile py-30p pr-30p pl-34p lg:pt-40p lg:pb-44p lg:pl-90p lg:pr-60p">
                     <input id="chk3" type="checkbox" class="hidden">
                     <label for="chk3"
                         class="cursor-pointer flex flex-row items-center justify-between gap-5 overflow-hidden relative">
