fix four boxes responsive

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link href="dist/style.css" rel="stylesheet" type="text/css">
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
-       <link href="https://fonts.googleapis.com" rel="preconnect">
-       <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-       <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+       <!-- <link href="https://fonts.googleapis.com" rel="preconnect"> -->
+       <!-- <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"> -->
+       <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet"> -->
 
     <!--    <script src="dist/script.js"></script>-->
 
@@ -193,12 +193,11 @@
     <!--Section 2-->
     <div class="co-container">
         <div class="rounded-mobile lg:rounded-desktop bg-co-dark mb-10 pb-5 lg:py-58p lg:mb-150p">
-            <div
-                class="mx-auto max-w-9 flex flex-col-reverse lg:grid lg:grid-cols-2 gap-10 lg:gap-11 items-center pt-47p lg:pt-0">
+            <div class="mx-auto max-w-9 flex flex-col-reverse xl:grid xl:grid-cols-2 gap-10 lg:gap-11 items-center pt-47p lg:pt-0">
 
                 <!-- four boxes -->
                 <div class="flex flex-col gap-5 w-full">
-                    <div class="flex flex-col gap-5 lg:gap-60p lg:grid lg:grid-cols-2 text-co-dark">
+                    <div class="flex flex-col gap-5 lg:gap-60p md:grid md:grid-cols-2 text-co-dark">
 
                         <!--Box No.1-->
                         <div class="box">
@@ -217,7 +216,7 @@
                         </div>
 
                         <!--Box No.2-->
-                        <div class="box bg-co-yellow lg:-mb-120p lg:self-end">
+                        <div class="box bg-co-yellow xl:-mb-120p xl:self-end">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                                 <img alt=" " src="assets/img/img-2.png">
                                 <div class="flex flex-col gap-9p items-start">
@@ -233,7 +232,7 @@
                         </div>
 
                         <!--Box No.3-->
-                        <div class="box lg:bg-co-yellow">
+                        <div class="box md:bg-co-yellow">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                                 <img alt=" " src="assets/img/img-3.png">
                                 <div class="flex flex-col gap-9p items-start">
@@ -248,7 +247,7 @@
                         </div>
 
                         <!--Box No.4-->
-                        <div class="box bg-co-yellow lg:bg-co-white  lg:-mb-120p lg:self-end">
+                        <div class="box bg-co-yellow md:bg-co-white  xl:-mb-120p xl:self-end">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
                                 <img alt=" " src="assets/img/img-4.png">
                                 <div class="flex flex-col gap-9p items-start">
@@ -267,8 +266,7 @@
                 </div>
 
                 <!-- info button box -->
-                <div
-                    class="flex flex-col items-center gap-30p text-center lg:text-left lg:items-start w-[90%] lg:w-auto mx-auto">
+                <div class="flex flex-col items-center gap-30p text-center xltext-left lx:items-start w-[90%] xl:w-auto mx-auto">
                     <p class="text-co-p1 text-co-yellow lg:pr-50p">Quisque porttitor vitae vel amet neque scelerisque
                         mattis.
                         Consectetur nibh velit magna consectetur leo. </p>
