--- a/index.html
+++ b/index.html
@@ -145,15 +145,13 @@
     <!-- Section 1 -->
     <div class="co-container">
         <div class="rounded-mobile lg:rounded-desktop bg-co-yellow mb-10 lg:mb-150p">
-            <div
-                class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-135p">
-                <div class="lg:flex-1 flex justify-center">
+            <div class="mx-auto max-w-9 flex flex-col xl:flex-row-reverse gap-30p xl:gap:44p items-center py-22p lg:py-135p">
+                <div class="xl:flex-1 flex justify-center">
                     <img alt=" " height="714" src="assets/img/vector-1.svg" width="714">
                 </div>
 
-                <div class="lg:flex-1 flex justify-center">
-                    <div
-                        class="flex flex-col gap-30p lg:gap-50p items-center lg:items-start text-center lg:text-left lg:w-[70%]">
+                <div class="xl:flex-1 flex justify-center">
+                    <div class="flex flex-col gap-30p lg:gap-50p items-center xl:items-start text-center xl:text-left xl:w-[70%]">
                         <h1 class="text-co-mo-h1 lg:text-co-h4">Phasellus a vitae
                             iaculis magna
                             eleifend pulvinar
