--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
     <!-- Testimonial Section -->
     <div class=" co-container">
 
-        <div
-            class="testimonial bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10 lg:mb-170p lg:py-100p">
+        <div id="testimonial1"
+            class="testimonial bg-co-white rounded-mobile lg:rounded-desktop pt-42p pb-38p mb-10 lg:mb-170p lg:py-100p" >
 
             <div class="swiper flex flex-col gap-10">
 
@@ -370,11 +370,6 @@
                         </svg>
                     </button>
                 </div>
-
-
-                <!-- If we need navigation buttons -->
-                <!-- <div class="swiper-button-prev"></div> -->
-                <!-- <div class="swiper-button-next"></div> -->
 
             </div>
         </div>
@@ -640,7 +635,6 @@
 
     </div>
 
-    <script src="assets/js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
@@ -666,7 +660,10 @@
             //     el: '.swiper-scrollbar',
             //   },
         });
+
+
     </script>
+        <script src="assets/js/script.js"></script>
 
 </body>
 
