--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!--Header-->
     <div class="co-container">
         <header class="flex justify-between align-middle h-70p lg:h-24 pb-3 mt-5 md:mt-10">
-            <a href="#"><img alt="Logo" src="/assets/img/logo.png"></a>
+            <a href="#"><img alt="Logo" src="assets/img/logo.png"></a>
             <div class="flex flex-row self-center items-center gap-1">
-                <img alt="en" src="/assets/img/flag-en.svg">
+                <img alt="en" src="assets/img/flag-en.svg">
                 <label class="w-4 h-4 flex justify-center items-center"><img alt="Select country"
-                        src="/assets/img/arrow_drop_down.svg"></label>
+                        src="assets/img/arrow_drop_down.svg"></label>
             </div>
         </header>
         <div class="h-1p w-full bg-co-dark-12 mb-16 lg:mb-148p"></div>
@@ -315,7 +315,7 @@
 
                                 <img alt="Customer Picture"
                                     class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3"
-                                    src="/assets/img/customer1.jpeg">
+                                    src="assets/img/customer1.jpeg">
 
                                 <div
                                     class="flex flex-col items-center lg:items-start text-center lg:text-start gap-5 lg:basis-2/3 lg:mb-5">
@@ -337,7 +337,7 @@
 
                                 <img alt="Customer Picture"
                                     class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3"
-                                    src="/assets/img/customer2.jpg">
+                                    src="assets/img/customer2.jpg">
 
                                 <div
                                     class="flex flex-col items-center lg:items-start text-center lg:text-start gap-5 lg:basis-2/3 lg:mb-5">
