--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- displays site properly based on user's device -->
-
+    <meta name="description" content="Corporate theme site using tailwind">
+        
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <link href="dist/style.css" rel="stylesheet" type="text/css">
@@ -38,7 +39,7 @@
             class="before:content-[' '] before:absolute before:left-0 before:top-150p before:bg-leaf-mo before:md:bg-leaf before:w-full before:overflow-visible before:bg-no-repeat before:h-[5000px] before:z-[-1]">
             <div class="co-container">
                 <div
-                    class="flex flex-col gap-30p lg:gap-60p justify-between lg:w-5/6 mx-auto mb-10 lg:mb-172p w-[90%] lg:w-auto mx-auto">
+                    class="flex flex-col gap-30p lg:gap-60p justify-between mx-auto mb-10 lg:mb-172p w-[90%] lg:w-auto">
                     <div class="flex flex-col gap-3.5 items-center text-center">
                         <h5 class="uppercase text-co-mo-h5-capital lg:text-co-h5-capital text-co-yellow">risus praesent
                             vulputate.</h5>
@@ -145,7 +146,7 @@
             <div
                 class="mx-auto max-w-9 flex flex-col xl:flex-row-reverse gap-30p xl:gap:44p items-center py-22p lg:py-135p">
                 <div class="xl:flex-1 flex justify-center">
-                    <img alt=" " height="714" src="assets/img/vector-1.svg" width="714">
+                    <img alt="" aria-hidden="true" height="714" src="assets/img/vector-1.svg" width="714">
                 </div>
 
                 <div class="xl:flex-1 flex justify-center">
@@ -200,7 +201,7 @@
                         <!--Box No.1-->
                         <div class="box">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-[80%] mx-auto lg:w-full">
-                                <img alt=" " src="assets/img/img-1.png">
+                                <img alt="" aria-hidden="true" src="assets/img/img-1.png">
                                 <div class="flex flex-col gap-9p items-start">
                                     <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2">1</span><span
                                             class="text-[66px] font-bold text-co-yellow lg:text-co-h2">.</span>
@@ -216,7 +217,7 @@
                         <!--Box No.2-->
                         <div class="box bg-co-yellow xl:-mb-120p xl:self-end">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
-                                <img alt=" " src="assets/img/img-2.png">
+                                <img alt="" aria-hidden="true" src="assets/img/img-2.png">
                                 <div class="flex flex-col gap-9p items-start">
                                     <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2">2</span><span
                                             class="text-[66px] font-bold text-co-white lg:text-co-h2">.</span>
@@ -232,7 +233,7 @@
                         <!--Box No.3-->
                         <div class="box md:bg-co-yellow">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
-                                <img alt=" " src="assets/img/img-3.png">
+                                <img alt="" aria-hidden="true" src="assets/img/img-3.png">
                                 <div class="flex flex-col gap-9p items-start">
                                     <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2">3</span><span
                                             class="text-[66px] font-bold text-co-yellow lg:text-co-white lg:text-co-h2">.</span>
@@ -247,7 +248,7 @@
                         <!--Box No.4-->
                         <div class="box bg-co-yellow md:bg-co-white  xl:-mb-120p xl:self-end">
                             <div class="flex flex-col items-start gap-2.5 lg:gap-34p w-2/3 mx-auto lg:w-full">
-                                <img alt=" " src="assets/img/img-4.png">
+                                <img alt="" aria-hidden="true" src="assets/img/img-4.png">
                                 <div class="flex flex-col gap-9p items-start">
                                     <div class="mb-9p"><span class="text-[66px] font-bold lg:text-co-h2">4</span><span
                                             class="text-[66px] font-bold text-co-white lg:text-co-yellow lg:text-co-h2">.</span>
@@ -313,15 +314,15 @@
                             <div
                                 class="card-content flex flex-col lg:flex-row items-center gap-10 lg:gap-72p lg:justify-center">
 
-                                <img alt="Customer Picture"
-                                    class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3"
-                                    src="assets/img/customer1.jpeg">
+                                <img alt="Holly Davidson"
+                                    class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3 aspect-auto"
+                                    src="assets/img/customer1.webp">
 
                                 <div
                                     class="flex flex-col items-center lg:items-start text-center lg:text-start gap-5 lg:basis-2/3 lg:mb-5">
                                     <h4 class="text-co-h3-bold lg:text-co-h4">What our customers thought?</h4>
                                     <p class="text-base lg:text-co-h5">
-                                        Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
+                                        blandit rutrum at mauris enim pulvinar duis duis. </p>
                                     <span class="card-name text-co-button mb-2.5 lg:mb-5">Holly Davidson</span>
 
                                 </div>
@@ -335,16 +336,16 @@
                             <div
                                 class="card-content flex flex-col lg:flex-row items-center gap-10 lg:gap-72p lg:justify-center">
 
-                                <img alt="Customer Picture"
-                                    class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3"
-                                    src="assets/img/customer2.jpg">
+                                <img alt="Sam wisely"
+                                    class="rounded-full w-272p h-272p lg:w-472p lg:h-472p lg:basis-1/3 aspect-square"
+                                    src="assets/img/customer2.webp">
 
                                 <div
                                     class="flex flex-col items-center lg:items-start text-center lg:text-start gap-5 lg:basis-2/3 lg:mb-5">
                                     <h4 class="text-co-h3-bold lg:text-co-h4">What our customers thought?</h4>
                                     <p class="text-base lg:text-co-h5">
                                         Condimentum blandit rutrum at mauris enim pulvinar duis etiam duis. </p>
-                                    <span class="card-name text-co-button mb-2.5 lg:mb-5">Holly Davidson</span>
+                                    <span class="card-name text-co-button mb-2.5 lg:mb-5">Sam wisely</span>
 
                                 </div>
                             </div>
@@ -382,7 +383,7 @@
             <div
                 class="mx-auto max-w-9 flex flex-col lg:flex-row-reverse gap-30p lg:gap:44p items-center py-22p lg:py-118p">
                 <div class="lg:flex-1 flex justify-center">
-                    <img alt=" " height="714" src="assets/img/vector2.svg" width="714">
+                    <img alt="" aria-hidden="true" height="714" src="assets/img/vector2.svg" width="714">
                 </div>
 
                 <!-- Info box -->
