--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 
-<body class="bg-co-bg2 font-primary">
+<body class="bg-co-bg2 font-primary text-co-dark">
 
     <!--Header-->
     <div class="co-container">
