update assets & readme

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Corporate Theme</title>
+    <title>Acme Co. Landing</title>
 
     <link href="assets/img/favicon.png" rel="icon" type="image/png">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <!-- displays site properly based on user's device -->
-    <meta name="description" content="Corporate theme site using tailwind">
+    <meta name="description" content="Acme Landing page">
         
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
@@ -20,8 +20,8 @@
 
     <!--Header-->
     <div class="co-container">
-        <header class="flex justify-between align-middle h-70p lg:h-24 pb-3 mt-5 md:mt-10">
-            <a href="#"><img alt="Logo" src="assets/img/logo.png"></a>
+        <header class="flex justify-between items-center h-70p lg:h-24 pb-3 mt-5 md:mt-10">
+            <a href="#" class="max-w-[140px] h-auto"><img alt="Logo" src="assets/img/acme.svg"></a>
             <div class="flex flex-row self-center items-center gap-1">
                 <img alt="en" src="assets/img/flag-en.svg">
                 <label class="w-4 h-4 flex justify-center items-center"><img alt="Select country"
